# calligraphy-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  后端开发规范.md  后端开发计划v1.4.md
H5/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
H5/scripts/: convert-to-webp.mjs
H5/src/: index.css
alembic/: env.py
app/: main.py
app/api/: dependencies.py  routers.py
app/core/: config.py  exceptions.py  redis.py  security.py
app/models/: __init__.py  audit_log.py  base.py  book.py  classroom.py  enums.py  score_record.py  sms_code.py  student.py  student_book_score.py  user.py  work.py  work_history.py
app/schemas/: audit_log.py  base.py  book.py  classroom.py  score.py  student.py  student_auth.py  teacher.py  user.py  wechat.py  work.py
app/services/: audit_service.py  auth_service.py  book_service.py  score_service.py  sms_service.py  student_auth_service.py  student_service.py  wechat_service.py  work_service.py
docs/plans/: 2026-02-22-calligraphy-backend-design.md  2026-02-22-calligraphy-implementation.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: auth.spec.ts  scoring.spec.ts  student.spec.ts  (+1 more)
scripts/: add_students.py  clear_demo_data.py  init_db.py  local_dev_server.py  run_e2e.py  seed_demo_data.py
tests/: conftest.py  test_app_runtime.py  test_redis_runtime.py
(+64 files in other folders)
